[gd_scene load_steps=7 format=3 uid="uid://flashy_level_up"]

[ext_resource type="Script" path="res://scenes/ui/level_up_scene_flashy.gd" id="1_flashy_script"]

[sub_resource type="Gradient" id="Gradient_radial"]
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(0.2, 0.1, 0.4, 1, 0.4, 0.2, 0.6, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_radial"]
gradient = SubResource("Gradient_radial")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Curve" id="Curve_particle"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_particle"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glow"]
bg_color = Color(0.4, 0.2, 0.8, 0.3)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.4, 1, 0.8)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 15
shadow_offset = Vector2(0, 0)
shadow_color = Color(0.5, 0.3, 1, 0.5)

[node name="LevelUpScene" type="CanvasLayer"]
layer = 100
script = ExtResource("1_flashy_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="GradientOverlay" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_radial")
expand_mode = 1

[node name="ParticlesBG" type="CPUParticles2D" parent="."]
position = Vector2(576, 324)
amount = 50
lifetime = 3.0
preprocess = 2.0
emission_shape = 3
emission_rect_extents = Vector2(600, 350)
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, -50)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_particle")
color_ramp = SubResource("Gradient_particle")

[node name="ParticlesStars" type="CPUParticles2D" parent="."]
position = Vector2(576, 100)
amount = 30
lifetime = 2.0
preprocess = 1.0
emission_shape = 3
emission_rect_extents = Vector2(500, 50)
direction = Vector2(0, 1)
spread = 30.0
gravity = Vector2(0, 100)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_particle")
color = Color(1, 0.843137, 0, 1)
color_ramp = SubResource("Gradient_particle")

[node name="Flash" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlowPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_glow")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StarLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.6, 0, 1)
theme_override_colors/font_outline_color = Color(0.4, 0.2, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 72
text = "★ LEVEL UP! ★"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.5, 0.3, 1, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 56
text = "Level X → Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AbilityIcon" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.5, 0.3, 1, 0.5)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 80
text = "⭐"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.5, 0.5, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 42
text = "New Ability Unlocked!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityDesc" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 28
text = "Description goes here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="ContinueLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 0.7)
theme_override_font_sizes/font_size = 22
text = "Press any key to continue..."
horizontal_alignment = 1
vertical_alignment = 1
